Complete project setup, adding frontend UI and updated backend services